===v4.6.4===
 * Rewrote the help module, and migrated/added some new warnings to it.
 * Bug Fixes:
 ** (r270) Export strings with a pipe character should now work properly
 ** (r271) Temporary fix for failed assertion when calling Parser:SetSpellByID(109388)
 ** (r272) Multi-state cooldowns will now reflect the spell being displayed in their %s variable (bindings/text output).
 ** (r273) The slot settings for Wild Mushroom icons and other totem icon variants can once again be configured without error.
 ** (r276) Fixed a breaking typo in the enUS locale file.
 
===v4.6.3===
 * Bug Fixes:
 ** (r268) The button to reset icons should now work properly
 
===v4.6.2===
 * Item cooldowns now have their own icon type.
 * Added text substitutions for unit and spell names.
 * Stack and binding texts are much more customizable now.
 * Two icon events have been added:
 ** On Unit Changed - fires when the unit for which information is being displayed on the icon changes. Only applicable to icon types that check units.
 ** On Spell Changed - fires when the spell/item/etc for which information is being displayed on the icon changes.
 * You can now change the frame strata of groups under the position tab of the group settings.
 * Added import/export boxes/dropdowns to the group settings and profile settings.
 * Bug Fixes:
 ** (r257) Fixed warnings for missing durations (they weren't showing up)
 ** (r260) The list of chat frames that can be outputted to should now list all valid frames, shown or not.
 ** (r261) The "Check Activation Overlay" setting for reactive icons should now function properly for spells entered as names.

===v4.6.1===
 * Bug Fixes:
 ** (r252) Removed spam when pasting a corrupt string
 ** (r252) Importing very old strings should now work. (Very old means pre-v4.1.4)
 ** (r253) TellMeWhen_Options\TellMeWhen_Options.lua:2246: attempt to index global "current" (a nil value)