@@ -1,5 +1,6 @@
 ===v4.6.4===
  * Rewrote the help module, and migrated/added some new warnings to it.
+ * Diminishing return category mismatch warnings are now much more informative.
  * Bug Fixes:
  ** (r270) Export strings with a pipe character should now work properly
  ** (r271) Temporary fix for failed assertion when calling Parser:SetSpellByID(109388)
